fix: replace toList() with collect(Collectors.toList()) in QamisIntegrationService